--- a/src/main/resources/public/src/scss/document/_variables.scss
+++ b/src/main/resources/public/src/scss/document/_variables.scss
@@ -45,3 +45,7 @@ $tag-hover-btn-remove-bg-color:              $point-blue;
 $tag-invalid-border:                         0.0625rem solid #FFEBEE; // 1px
 $tag-invalid-color:                          rgba(255, 64, 90, 0.7); // $red , 불투명도 70
 $tag-invalid-bg-color:                       rgba(255, 64, 90, 0.1); // $red , 불투명도 10
+
+//////////////////////////// CI 모달 /////////////////////////
+$cmdb-ci-modal-width:                        62.5rem; // 1000px
+$cmdb-ci-modal-height:                       53.0625rem; // 849px
