--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -4349,6 +4349,7 @@ body.modal-active {
 }
 .modal-wrapper.modal-active {
   display: block;
+  z-index: 2001;
 }
 .modal-wrapper .modal-backdrop {
   position: fixed;
@@ -5168,3 +5169,5 @@ body.modal-active {
 .itsm-popup .notice-content-popup.view {
   height: auto;
 }
+
+/*# sourceMappingURL=itsm.css.map */
