--- a/src/main/resources/public/src/scss/document/document.scss
+++ b/src/main/resources/public/src/scss/document/document.scss
@@ -4,7 +4,7 @@
  * Copyright 2020 Brainzcompany Co., Ltd.
  * https://www.brainz.co.kr
  */
-@charset 'utf-8';
+@charset "utf-8";
 
 @import '../template/_reset.scss';          // 상속 불가
 @import '../template/_variables.scss';      // 상속 불가
@@ -20,3 +20,4 @@
 @import '_elements.scss';
 @import '_tag.scss';
 @import '_print.scss';
+@import '_modal.scss';
