1. 언어셋 변경 2. view 화면 작업 3. custom-code 정리

--- a/src/main/resources/public/template/cmdb/attribute/attributeView.html
+++ b/src/main/resources/public/template/cmdb/attribute/attributeView.html
@@ -84,6 +84,7 @@
     </script>
     <script type="text/javascript" th:inline="javascript">
         /*<![CDATA[*/
+        const attributeData = /*[[${attribute?.attributeValue}]]*/ null;
         window.onload = function () {
             const attributeType = /*[[${attribute?.attributeType}]]*/ null;
             let attributeTypeObject = document.querySelector('#attributeType');
@@ -102,6 +103,11 @@
             changeType(attributeTypeObject, true);
 
             aliceJs.initDesignedSelectTag();
+
+            const detailObject = document.querySelector('#details');
+            detailObject.querySelectorAll('input').forEach(function(object) { object.disabled = true; });
+            detailObject.querySelectorAll('select').forEach(function(object) { object.disabled = true; });
+            detailObject.querySelectorAll('button').forEach(function(object) { object.disabled = true; });
 
             OverlayScrollbars(document.querySelectorAll('.edit'), { className: 'scrollbar' });
             OverlayScrollbars(document.querySelectorAll('.textarea-scroll-wrapper'), {
