1. 파일명 변경 2. delete -> btn-delete 변경

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -1676,8 +1676,8 @@ button.plus {
   width: 1.625rem;
   height: 1.625rem;
 }
-.btn.delete,
-button.delete {
+.btn.btn-delete,
+button.btn-delete {
   padding: 0;
   height: 2.5rem;
 }
