--- a/src/main/resources/public/template/cmdb/class/classAttributeList.html
+++ b/src/main/resources/public/template/cmdb/class/classAttributeList.html
@@ -14,7 +14,7 @@
         <th style="width: 40%;" class="align-left" th:text="#{cmdb.attribute.label.description}"></th>
     </tr>
     </thead>
-    <tbody id="cmdbClassAttributeList" class="list-body">
+    <tbody id="ciClassAttributeList" class="list-body">
     <tr class="no-data-found-list flex-row align-items-center" th:if="${#arrays.isEmpty(attributeList)}">
         <td style="width: 100%;" class="align-center" th:text="#{common.msg.noData}"></td>
     </tr>
