--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -330,7 +330,10 @@
                            `<div id="dropZoneFiles"></div>` +
                            `<div id="dropZoneUploadedFiles"></div>` +
                        `</div>` +
-                    `</div>`;
+                       `<h6 class="description">${i18n.msg('process.msg.noticeImportFile')}</h6>` +
+                    `</div>`
+
+                ;
         }
 
         // 프로세스 IMPORT 화면 오픈
