#9683 프로세스 가져오기 화면내 "IMPORT시, XML파일만 가능합니다." 문구 추가삽입

--- a/src/main/resources/public/template/process/processSearch.html
+++ b/src/main/resources/public/template/process/processSearch.html
@@ -331,9 +331,7 @@
                            `<div id="dropZoneUploadedFiles"></div>` +
                        `</div>` +
                        `<h6 class="description">${i18n.msg('process.msg.noticeImportFile')}</h6>` +
-                    `</div>`
-
-                ;
+                    `</div>`;
         }
 
         // 프로세스 IMPORT 화면 오픈
