--- a/src/main/resources/public/template/form/formSearch.html
+++ b/src/main/resources/public/template/form/formSearch.html
@@ -331,6 +331,7 @@
                            `<div id="dropZoneFiles"></div>` +
                            `<div id="dropZoneUploadedFiles"></div>` +
                        `</div>` +
+                       `<h6 class="description">${i18n.msg('process.msg.noticeImportFile')}</h6>` +
                     `</div>`;
         }
 
