--- a/src/main/resources/public/src/scss/theme/default/_variables.scss
+++ b/src/main/resources/public/src/scss/theme/default/_variables.scss
@@ -26,6 +26,7 @@ $menu-font:                                   1rem; // 16px;
 
 // Menu Icons
 $icon-gnb-board:                              $icon-folder-path + "gnb/icon_gnb_board.svg";
+$icon-gnb-chart:                              $icon-folder-path + "gnb/icon_gnb_chart.svg";
 $icon-gnb-dashboard:                          $icon-folder-path + "gnb/icon_gnb_dashboard.svg";
 $icon-gnb-document:                           $icon-folder-path + "gnb/icon_gnb_document.svg";
 $icon-gnb-download:                           $icon-folder-path + "gnb/icon_gnb_download.svg";
