--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2575,6 +2575,17 @@ button .icon-plus {
   mask-position: center;
   background: #929AA6;
 }
+.gnb .icon-gnb-chart {
+  width: 1.25rem;
+  height: 1.25rem;
+  -webkit-mask-image: url("../media/icons/gnb/icon_gnb_chart.svg");
+  mask-image: url("../media/icons/gnb/icon_gnb_chart.svg");
+  -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
+  -webkit-mask-position: center;
+  mask-position: center;
+  background: #929AA6;
+}
 .gnb .icon-gnb-dashboard {
   width: 1.25rem;
   height: 1.25rem;
@@ -4385,7 +4396,6 @@ body.modal-active {
 }
 .modal-wrapper.modal-active {
   display: block;
-  z-index: 2001;
 }
 .modal-wrapper .modal-backdrop {
   position: fixed;
@@ -5205,5 +5215,3 @@ body.modal-active {
 .itsm-popup .notice-content-popup.view {
   height: auto;
 }
-
-/*# sourceMappingURL=itsm.css.map */
