#10055 통계 차트 메뉴 조회 구현

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2074,6 +2074,7 @@ button .icon-plus {
 .image-header,
 .numbering-pattern-header,
 .numbering-rule-header,
+.chart-header,
 .cmdb-attribute-header,
 .cmdb-class-header,
 .cmdb-type-header,
@@ -2105,6 +2106,7 @@ button .icon-plus {
 .code-content,
 .numbering-pattern-content,
 .numbering-rule-content,
+.chart-content,
 .cmdb-attribute-content,
 .cmdb-type-content,
 .cmdb-class-content,
