#10055 통계 차트 메뉴 조회 구현

--- a/src/main/resources/public/template/chart/chartSearch.html
+++ b/src/main/resources/public/template/chart/chartSearch.html
@@ -123,7 +123,7 @@
             let tdChartType = document.createElement('td');
             tdChartType.style.width = '15%';
             tdChartType.className = 'align-left';
-            tdChartType.innerText = data.chartType;
+            tdChartType.innerText = i18n.msg(data.chartType);
 
             let tdChartName = document.createElement('td');
             tdChartName.style.width = '15%';
