#9685 삭제 alert창내 버튼 모양 곡선으로 변경

--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -2775,7 +2775,7 @@ button .icon-plus {
   display: inline-block;
   -webkit-border-radius: 0.0625rem;
   -moz-border-radius: 0.0625rem;
-  border-radius: 0.0625rem;
+  border-radius: 0.1875rem;
   text-decoration: none;
 }
 .gmodal-icon-success {
@@ -5232,3 +5232,5 @@ body.modal-active {
 .itsm-popup .notice-content-popup.view {
   height: auto;
 }
+
+/*# sourceMappingURL=itsm.css.map */
