--- a/src/main/resources/public/template/cmdb/ci/ciList.html
+++ b/src/main/resources/public/template/cmdb/ci/ciList.html
@@ -23,13 +23,15 @@
     </tr>
     <tr class="flex-row align-items-center" th:unless="${#arrays.isEmpty(ciList)}" th:each="ci: ${ciList}">
         <td style="width: 5%;">
-            <img width="27" height="27"/>
+            <img th:src="@{/assets/media/images/cmdb/{ciIcon}(ciIcon=${ci.ciIcon})}"/>
         </td>
-        <td style="width: 10%;" class="align-center" th:text="${ci.typeId}"></td>
+        <td style="width: 10%;" class="align-center" th:text="${ci.typeName}"></td>
         <td style="width: 20%;" class="align-center" th:text="${ci.ciNo}"></td>
         <td style="width: 15%;" class="align-left" th:text="${ci.ciName}"></td>
         <td style="width: 25%;" class="align-left" th:text="${ci.ciDesc}"></td>
-        <td style="width: 15%;" class="align-left"></td>
+        <td style="width: 15%;" class="align-left">
+            <span class="tag align-left text-ellipsis" th:each="tag: ${ci.tags}" th:text="${tag.tagName}"></span>
+        </td>
         <td style="width: 10%;" class="align-center">
             <button type="button">
                 <span class="icon-edit"></span>
