--- a/src/main/resources/public/template/form/formDesignerEdit.html
+++ b/src/main/resources/public/template/form/formDesignerEdit.html
@@ -4,7 +4,7 @@
       xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
       layout:decorator="form/formCore">
 <head>
-    <title th:text="${isView != null} ? #{form.label.form} + #{common.label.blank} + #{form.label.preview} : #{form.label.edit}"></title>
+    <title th:text="${isView != null} ? #{form.label.form} + #{common.label.blank} + #{form.label.preview} : #{form.label.update}"></title>
     <meta http-equiv="expire" content="-1"/>
     <meta http-equiv="cache-control" content="no-cache"/>
     <meta http-equiv="pragma" content="no-cache"/>
