--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -141,17 +141,7 @@
         min-height: 9.375rem; // 150px
       }
       .text-no-file {
-        height: 2.5rem;
-        font-family: inherit;
-        font-size: 1rem;
-        font-weight: 400;
-        line-height: 2.4;
-        border: 0.0625rem solid #EBEBEB;
-        border-radius: 0.0625rem;
-        padding: 0 0.625rem 0 0.625rem;
-        vertical-align: middle;
-        color: $gray;
-        background-color: $light-gray;
+        width: 100%
       }
       //custom-code 컴포넌트
       &.custom-code {
