--- a/src/main/resources/public/template/document/documentSearch.html
+++ b/src/main/resources/public/template/document/documentSearch.html
@@ -13,6 +13,8 @@
 <th:block layout:fragment="scriptLink">
     <script th:src="@{/assets/vendors/piklor/piklor.js}"></script>
     <script th:src="@{/assets/js/util/colorPalette-alice.js}"></script>
+    <script th:src="@{/assets/js/workflow/workflow.util.js}"></script>
+    <script th:src="@{/assets/js/cmdb/cmdb.attribute.js}"></script>
     <script th:src="@{/assets/js/form/form.core.js}"></script>
     <script th:src="@{/assets/js/form/form.component.ci.js}"></script>
     <script th:src="@{/assets/js/form/form.component.js}"></script>
