--- a/src/main/resources/public/template/form/fragments/formHead.html
+++ b/src/main/resources/public/template/form/fragments/formHead.html
@@ -23,6 +23,8 @@
     <script th:src="@{/assets/js/util/validation-alice.js}"></script>
     <script th:src="@{/assets/vendors/overlayScrollbars/OverlayScrollbars.js}"></script>
     <script th:src="@{/assets/js/util/tree-alice.js}"></script>
+    <script th:src="@{/assets/js/workflow/workflow.util.js}"></script>
+    <script th:src="@{/assets/js/cmdb/cmdb.attribute.js}"></script>
     <script th:src="@{/assets/js/form/form.core.js}"></script>
     <script th:src="@{/assets/js/form/form.component.ci.js}"></script>
     <script th:src="@{/assets/js/form/form.component.js}"></script>
