--- a/src/main/resources/public/assets/theme/default/css/itsm.css
+++ b/src/main/resources/public/assets/theme/default/css/itsm.css
@@ -5136,7 +5136,7 @@ body.modal-active {
   flex: none;
 }
 .reply-list {
-  padding: 0 1.25rem;
+  padding: 0 0;
   border-bottom: 0.0625rem solid #EBEBEB;
 }
 .reply-list .vertical-bar {
@@ -5167,6 +5167,7 @@ body.modal-active {
 }
 .reply-list .reply-comment input {
   width: 100%;
+  margin: 0 0.3125rem;
 }
 .reply .profile-photo {
   flex: none;
