--- a/src/main/resources/public/src/scss/form/_components.scss
+++ b/src/main/resources/public/src/scss/form/_components.scss
@@ -13,6 +13,11 @@
   border: $component-border;
   padding: 1.25rem 2.125rem 1.25rem 0.8125rem; // 20px 34.8px 20px 13px
 
+  // for accordion
+  &.accordion {
+    padding: 1.25rem 1.125rem 1.25rem 0.8125rem; // 20px 18px 20px 13px
+  }
+
   // drag and drop icon
   .move-handler {
     margin: 0 0.5rem 0 0; // 0 8.8px 0 0
@@ -184,23 +189,25 @@
       }
       // 아코디언 컴포넌트
       &.accordion {
+        height: 2.5rem; // 40px
+        background-color: $light-gray;
         position: relative;
-        padding-bottom: 0.625rem;; // 10px
+        padding: 0.625rem 0 0.625rem 1.125rem; // 10px 0 10px 18px
         cursor: pointer;
 
         label { margin-right: 1.875rem } // 30px
 
         .icon {
           position: absolute;
-          width: 0.625rem; // 10px
-          height: 0.375rem; // 6px;
+          width: 0.875rem; // 14px
+          height: 1.125rem; // 18px
           top: 30%;
           right: 0.625rem; // 10px
           opacity: 0;
 
           &.on { opacity: 1; }
           &.icon-arrow-down { @include background($icon-folder-path + 'icon_arrow_bottom.svg', 0.625rem 0.375rem, no-repeat, center, center, null); } // 10px 6px
-          &.icon-arrow-up { @include background($icon-folder-path + 'icon_arrow_up.svg', 0.625rem 0.375rem, no-repeat, center, center, null); } // 10px 6px
+          &.icon-arrow-left { @include background($icon-folder-path + 'icon_arrow_left.svg', 0.375rem 0.625rem, no-repeat, center, center, null); } // 6px 10px
         }
       }
       // CI 컴포넌트
