결함 #10136 [CI 컴포넌트] 신청서 버그 수정 및 CI 상태 추가

--- a/src/main/resources/public/assets/css/form.css
+++ b/src/main/resources/public/assets/css/form.css
@@ -459,6 +459,10 @@ input, button, select, optgroup, textarea {
   border-bottom: 0.125rem solid #E1E3E6;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 /* _fonts.scss 
  *
  * 파일 경로 : template/_fonts.scss
