--- a/src/main/resources/public/src/scss/document/_variables.scss
+++ b/src/main/resources/public/src/scss/document/_variables.scss
@@ -52,3 +52,7 @@ $cmdb-ci-modal-height:                       53.0625rem; // 849px
 
 $cmdb-ci-attribute-border:                   0.0625rem solid $line-gray; // 1px
 $cmdb-ci-attribute-bg-color:                 $light-gray;
+
+///////////////////////////// Tree ////////////////////////////////
+$tree-modal-width:                           40rem; // 640px
+$tree-modal-height:                          44.19rem; // 707px
