--- a/src/main/resources/public/assets/css/process.css
+++ b/src/main/resources/public/assets/css/process.css
@@ -459,6 +459,10 @@ input, button, select, optgroup, textarea {
   border-bottom: 0.125rem solid #E1E3E6;
 }
 
+.pointer {
+  cursor: pointer;
+}
+
 /* _fonts.scss 
  *
  * 파일 경로 : template/_fonts.scss
