--- a/src/main/resources/public/src/scss/theme/default/_modal.scss
+++ b/src/main/resources/public/src/scss/theme/default/_modal.scss
@@ -12,7 +12,7 @@
       div {
         height: 100%;
         label {
-          font-weight: 400;
+          font-weight: $font-weight-regular;
         }
         li {
           &:last-child:before {
